--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       const input = document.getElementById("pw").value;
       const error = document.getElementById("error");
 
-      if (input === "1234") {
+      if (input === "Berlin") {
         window.location.href = "/site.html";
       } else {
         error.style.display = "block";
