--- a/site.html
+++ b/site.html
@@ -1,143 +1,147 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hallihalo</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Klassenfahrt</title>
   <style>
-    /* Grundlayout */
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Segoe UI", Roboto, sans-serif;
+    }
 
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(180deg,#f6f7fb 0%, #f4f4f9 100%);
-      color: #222;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 24px;
-      gap: 16px;
+      justify-content: flex-start;
+      background: linear-gradient(180deg, #dbe9ff, #a8c8ff);
+      color: #0a2342;
+      padding: 30px 20px;
+      text-align: center;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    .background-text {
+      position: absolute;
+      font-size: 5rem;
+      font-weight: 800;
+      color: rgba(255,255,255,0.12);
+      text-transform: uppercase;
+      top: 10%;
+      left: 50%;
+      transform: translateX(-50%);
+      letter-spacing: 10px;
+      user-select: none;
+      animation: float 8s ease-in-out infinite alternate;
+    }
+
+    @keyframes float {
+      from { transform: translate(-50%, 0px); }
+      to { transform: translate(-50%, 10px); }
     }
 
     h1 {
-      font-size: 1.6rem;
-      text-align: center;
+      font-size: 1.8rem;
+      margin-bottom: 10px;
       font-weight: 700;
-      color: #111;
+      color: #0a2342;
     }
 
     p {
-      text-align: center;
-      color: #555;
+      color: #123;
+      margin-bottom: 25px;
       font-size: 1rem;
-      line-height: 1.5;
-      max-width: 800px;
+      max-width: 600px;
     }
 
-    /* Cartoon-Karte */
     .cartoon-card {
+      background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(10px);
+      border-radius: 18px;
+      padding: 25px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      transition: all 0.3s ease;
+      max-width: 700px;
       width: 100%;
-      max-width: 900px;
-      background: #fff;
-      border-radius: 14px;
-      padding: 16px;
-      box-shadow: 0 8px 24px rgba(16,24,40,0.06);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
-      transition: transform .25s ease, box-shadow .25s ease;
+      margin-top: 10px;
+      animation: fadeIn 0.8s ease;
     }
 
     .cartoon-card:hover {
-      transform: translateY(-2px);
+      transform: translateY(-3px);
+      box-shadow: 0 14px 30px rgba(0,0,0,0.15);
     }
 
-    img#cartoonImage {
-      width: 100%;
-      height: auto;
-      max-height: 75vh;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    img {
+      max-width: 100%;
       border-radius: 10px;
-      object-fit: contain;
-      transition: opacity .4s ease-in-out;
-      opacity: 1;
-    }
-
-    .placeholder {
-      width: 50%;
-      height: 12px;
-      border-radius: 8px;
-      background: linear-gradient(90deg,#eee,#f5f5f7,#eee);
-      animation: pulse 1.4s infinite;
-      margin: 18px 0;
-    }
-
-    @keyframes pulse {
-      0%,100% { opacity: 0.6; transform: translateY(0); }
-      50% { opacity: 1; transform: translateY(-4px); }
-    }
-
-    /* Blinkender Button */
-    @keyframes rainbowBlink {
-      0%   { background: #ff0057; }
-      16%  { background: #ff8c00; }
-      33%  { background: #ffee00; color: #111; }
-      50%  { background: #32cd32; color: #fff; }
-      66%  { background: #007bff; color: #fff; }
-      83%  { background: #8a2be2; color: #fff; }
-      100% { background: #ff00ff; color: #fff; }
+      margin-bottom: 15px;
+      transition: opacity 0.4s ease-in-out;
     }
 
     button {
-      border: none;
-      cursor: pointer;
-      padding: 14px 28px;
-      border-radius: 12px;
-      font-weight: 700;
+      margin-top: 10px;
+      padding: 12px 26px;
       font-size: 1rem;
-      line-height: 1;
+      border: none;
+      border-radius: 10px;
       color: #fff;
-      min-width: 180px;
-      box-shadow: 0 6px 20px rgba(16,24,40,0.12);
-      animation: rainbowBlink 3s infinite alternate;
-      transition: transform .12s ease, box-shadow .12s ease;
+      cursor: pointer;
+      font-weight: 700;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      animation: blink 3s infinite alternate ease-in-out;
+      background: linear-gradient(90deg, #007bff, #00aaff);
+      transition: transform 0.2s ease;
     }
 
-    button:active { transform: scale(.97); }
+    @keyframes blink {
+      0% { background: #007bff; }
+      50% { background: #005fcc; }
+      100% { background: #009dff; }
+    }
+
+    button:hover {
+      transform: scale(1.05);
+    }
 
     footer {
-      text-align: center;
-      color: #666;
-      font-size: 0.85rem;
-      margin-top: 20px;
+      margin-top: 40px;
+      color: rgba(255,255,255,0.85);
+      font-size: 0.9rem;
     }
 
-    /* Responsive */
     @media (max-width: 600px) {
-      h1 { font-size: 1.3rem; }
+      h1 { font-size: 1.5rem; }
       p { font-size: 0.95rem; }
-      button { width: 100%; }
+      .background-text { font-size: 3rem; top: 15%; }
+      .cartoon-card { padding: 20px; }
     }
   </style>
 </head>
 <body>
-  <h1>Hallo Martina und deine Schüler</h1>
-  <p>
-    Wie war es so in Berlin? 😊 Auch an deine Schüler: Noch eine tolle Rückfahrt!  
-    <br><br>
-    <strong>PS:</strong> Drück mal den blinkenden Knopf!
-  </p>
+  <div class="background-text">CARTOON</div>
+
+  <h1>Hallo Martina und eure Klasse 👋</h1>
+  <p>Wie war’s in Berlin? 😄 Auch liebe Grüße an deine Schüler!  
+  <br>Habt eine tolle Rückfahrt – und...  
+  <br><b>drückt mal den blinkenden Knopf!</b></p>
 
   <div class="cartoon-card">
-    <div class="placeholder" id="placeholder"></div>
-    <img id="cartoonImage" src="" alt="Cartoon wird geladen..." style="opacity:0" />
-    <button onclick="loadRandomCartoon()">Drück Mich 😉</button>
+    <img id="cartoonImage" src="" alt="Cartoon wird geladen..." />
+    <button onclick="loadRandomCartoon()">Drück mich </button>
   </div>
 
-  <footer>
-    <small>Von den Hogrebes und Julius mit Liebe Gemacht</small>
-  </footer>
+  <footer>mit liebe Gemacht</footer>
 
   <script>
     const cartoons = [
@@ -155,32 +159,14 @@
       'https://ruthe.de/cartoons/strip_0033.jpg'
     ];
 
-    const img = document.getElementById('cartoonImage');
-    const placeholder = document.getElementById('placeholder');
-
     function loadRandomCartoon() {
-      placeholder.style.display = 'block';
-      img.style.opacity = 0;
-
       const randomIndex = Math.floor(Math.random() * cartoons.length);
-      const newUrl = cartoons[randomIndex];
-      const tempImg = new Image();
-
-      tempImg.onload = () => {
-        setTimeout(() => {
-          img.src = newUrl;
-          img.style.opacity = 1;
-          placeholder.style.display = 'none';
-        }, 150);
-      };
-
-      tempImg.onerror = () => {
-        placeholder.style.display = 'none';
-        img.src = '';
-        img.alt = 'Fehler beim Laden ';
-      };
-
-      tempImg.src = newUrl;
+      const img = document.getElementById('cartoonImage');
+      img.style.opacity = 0;
+      setTimeout(() => {
+        img.src = cartoons[randomIndex];
+        img.style.opacity = 1;
+      }, 300);
     }
 
     window.onload = loadRandomCartoon;
