--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <footer>© 2025 Cartoon-Projekt – Blue Edition 💙</footer>
 
   <script>
-    const PASSWORD = "ruthe"; // 🔑 Passwort hier anpassen
+    const PASSWORD = "Berlin"; // 🔑 Passwort hier anpassen
 
     function checkPassword() {
       const input = document.getElementById("passwordInput").value.trim();
