--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       if (input === PASSWORD) {
         document.body.style.transition = "opacity 0.8s ease";
         document.body.style.opacity = "0";
-        setTimeout(() => window.location.href = "cartoon.html", 800);
+        setTimeout(() => window.location.href = "site.html", 800);
       } else {
         error.style.display = "block";
         error.style.animation = "shake 0.3s ease";
